try diff feat factor

--- a/jcgs_reviewer/reviewer_1.tex
+++ b/jcgs_reviewer/reviewer_1.tex
@@ -41,7 +41,7 @@
 		
 		\point{The authors note that the models considered in Sections 2.4.2 and 2.4.3 are usually employed with only two regularization parameters but propose using a larger set of regularization parameters. In the corresponding simulations in Sections 3.2 and 3.3, they compare using a larger set of regularization parameters against using two regularization parameters selected using grid search. The grid spaces considered are fairly small, so it’s not clear if the improved performance for gradient descent is due to the additional regularization parameters or due to the dependence of performance on the grid space. To provide additional insight into what’s causing the difference in performance, could the authors also present results using gradient descent, Nelder-mead, and Spearmint for the two parameter case?}
 		
-		\reply We have added gradient descent, Nelder-mead, and spearmint for the two-parameter case in the appendix.
+		\reply We have added the results from gradient descent, Nelder-mead, and spearmint for the two-parameter case for all the examples from Section 3 in the appendix.
 		
 		\point{The authors report average performance and standard errors for the simulations done in Section 3. How many simulation runs were used in each example?}
 		
