--- a/jcgs_reviewer/reviewer_ae.tex
+++ b/jcgs_reviewer/reviewer_ae.tex
@@ -43,7 +43,7 @@
 		
 		The editor is correct in that the condition of interest is whether the loss is smooth almost everywhere with respect to the probability measure induced by the true sampling model. However we believe that even under the true sampling model, the probability measure is the same except over the penalty parameter knots where a set of measure zero where the validation loss is not smooth with respect to the penalty parameters. Our implementation of gradient descent searches the penalty parameter space agnostic to the fact that the training criterion is not smooth. Therefore it is very unlikely for gradient descent to end up exactly at a knot location. In addition, we believe that it is very unlikely for the penalty parameter that minimizes the validation loss to be where the validation loss is non-smooth. For a small perturbation in the validation dataset, it would seem that the penalty parameter would also perturb a small amount. It seems unlikely that the penalty parameter would jump to another value where the validation loss is non-smooth.
 		
-		We performed a simulation study to see if our believe holds true. We considered a simple case of the lasso with 50 covariates and plotted the distance between the lasso parameter that minimizes the validation loss to the closest knot along the lasso path. The response was generated data from the model
+		We performed a simulation study to see if our believe holds true. We considered a simple case of the lasso with 50 covariates and plotted the distance between the lasso parameter that minimizes the validation loss to the closest knot along the lasso path. In the simulations, lasso parameter that zeroed out all the features was on average around 1. The response was generated data from the model
 		$$
 		y = X\beta + \sigma\epsilon
 		$$
