--- a/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth.bib
@@ -331,4 +331,17 @@
   organization={Springer}
 }
 
+@phdthesis{srebro2004learning,
+  title={Learning with matrix factorizations},
+  author={Srebro, Nathan},
+  year={2004},
+  school={Citeseer}
+}
+
+@phdthesis{fazel2002matrix,
+  title={Matrix rank minimization with applications},
+  author={Fazel, Maryam},
+  year={2002},
+  school={PhD thesis, Stanford University}
+}
 
